--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
-name: Deploy to Google Cloud
-run-name: Deploy to Google Cloud
+name: Deploy to Google Cloud Functions
+run-name: Deploy to Google Cloud Functions
 on: [push]
 jobs:
   Deploy:
@@ -11,5 +11,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-      - run: npm install
-      - run: npm run deploy
+      - name: Install dependencies
+        run: npm install
+      - name: Save environment variable to file
+        run: echo "${{ secrets.GOOGLE_CLOUD_SERVICE_ACCOUNT_KEY_FILE }}" | base64 -d >> key-file.json
+      - name: Authenticate service account
+        run: gcloud auth activate-service-account --key-file key-file.json
+      - name: Remove key-file.json
+        run: rm key-file.json
+      - name: Build and Deploy
+        run: npm run deploy
