--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     },
     "dependencies": {
         "@google-cloud/functions-framework": "3.3.0",
-        "axios": "0.27.2",
+        "axios": "1.6.2",
         "xmldom": "0.6.0",
         "xpath": "0.0.32"
     },
     "devDependencies": {
-        "@types/xmldom": "^0.1.34",
+        "@types/xmldom": "0.1.34",
         "typescript": "5.3.3"
     },
     "author": "Max Zinovik",
