--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "bgg games ranks parser",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --config jestconfig.json --coverage",
         "build": "rm -rf dist && tsc",
         "dev": "tsc --watch & npx @google-cloud/functions-framework --target=main --source=dist --watch",
         "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs20 --entry-point=main --allow-unauthenticated --region=us-central1 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project",
@@ -19,7 +19,10 @@
     },
     "devDependencies": {
         "@types/xmldom": "0.1.34",
-        "typescript": "5.3.3"
+        "typescript": "5.3.3",
+        "jest": "29.0.3",
+        "@types/jest": "29.0.1",
+        "ts-jest": "29.0.0"
     },
     "author": "Max Zinovik",
     "license": "Apache-2.0",
