--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '20.x'
       - name: Install dependencies
         run: npm install
-      - name: Save environment variable to file
+      - name: Save service account key file environment variable to file
         run: echo "${{ secrets.GOOGLE_CLOUD_SERVICE_ACCOUNT_KEY_FILE }}" | base64 -d >> key-file.json
       - name: Authenticate service account
         run: gcloud auth activate-service-account --key-file key-file.json
