--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
         "test": "jest --config jestconfig.json --coverage",
         "build": "rm -rf dist && tsc",
         "dev": "npm run build && npx @google-cloud/functions-framework --target=main --source=dist",
-        "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs20 --entry-point=main --region=us-central1 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project",
-        "service:account": "gcloud iam service-accounts keys create key-file.json --iam-account=zinovik-project@appspot.gserviceaccount.com",
-        "describe": "gcloud functions describe bgg-games-ranks-parser --region=us-central1"
+        "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs20 --entry-point=main --region=us-central1 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project"
     },
     "dependencies": {
         "@google-cloud/functions-framework": "3.3.0",
