--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test": "jest --config jestconfig.json --coverage",
         "build": "rm -rf dist && tsc",
         "dev": "npm run build && npx @google-cloud/functions-framework --target=main --source=dist",
-        "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs20 --entry-point=main --no-allow-unauthenticated --region=us-central1 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project"
+        "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs20 --entry-point=main --no-allow-unauthenticated --region=europe-central2 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project"
     },
     "dependencies": {
         "@google-cloud/functions-framework": "3.3.0",
