--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     },
     "dependencies": {
         "@google-cloud/functions-framework": "3.3.0",
-        "axios": "1.6.2",
+        "axios": "1.13.2",
+        "axios-retry": "4.5.0",
         "xmldom": "0.6.0",
         "xpath": "0.0.32"
     },
     "devDependencies": {
-        "@types/xmldom": "0.1.34",
-        "typescript": "5.3.3",
-        "jest": "29.0.3",
         "@types/jest": "29.0.1",
-        "ts-jest": "29.0.0"
+        "@types/xmldom": "0.1.34",
+        "jest": "29.0.3",
+        "ts-jest": "29.0.0",
+        "typescript": "5.3.3"
     },
     "author": "Max Zinovik",
     "license": "Apache-2.0",
