--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
         "test": "jest --config jestconfig.json --coverage",
         "build": "rm -rf dist && tsc",
         "dev": "npm run build && npx @google-cloud/functions-framework --target=main --source=dist",
-        "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs20 --entry-point=main --no-allow-unauthenticated --region=europe-central2 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project"
+        "deploy": "npm run build && cp package*.json dist && gcloud functions deploy bgg-games-ranks-parser --gen2 --trigger-http --runtime nodejs22 --entry-point=main --no-allow-unauthenticated --region=europe-central2 --source=dist --update-build-env-vars=\"GOOGLE_NODE_RUN_SCRIPTS=\" --project zinovik-project"
     },
     "dependencies": {
-        "@google-cloud/functions-framework": "3.3.0",
-        "axios": "1.13.2",
-        "axios-retry": "4.5.0",
+        "@google-cloud/functions-framework": "5.0.2",
+        "puppeteer": "24.37.5",
         "xmldom": "0.6.0",
-        "xpath": "0.0.32"
+        "xpath": "0.0.34"
     },
     "devDependencies": {
-        "@types/jest": "29.0.1",
+        "@types/jest": "30.0.0",
         "@types/xmldom": "0.1.34",
-        "jest": "29.0.3",
-        "ts-jest": "29.0.0",
-        "typescript": "5.3.3"
+        "jest": "30.2.0",
+        "ts-jest": "29.4.6",
+        "typescript": "5.9.3"
     },
     "author": "Max Zinovik",
     "license": "Apache-2.0",
