--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@google-cloud/functions-framework": "5.0.2",
+        "@sparticuz/chromium": "143.0.4",
         "puppeteer": "24.37.5",
         "xmldom": "0.6.0",
         "xpath": "0.0.34"
